# GHCP-SDK-demo

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE.md  EXAMPLES.md  QUICKSTART.md
ghcp_sdk_demo/: __init__.py  __main__.py  app.py
ghcp_sdk_demo/demos/: __init__.py  chat.py  chat_demo.py  code_generation_demo.py  codegen.py  context_aware_demo.py  tools.py
ghcp_sdk_demo/static/: app.js  index.html  style.css
ghcp_sdk_demo/utils/: logger.py  prompts.py
screenshots/: README.md  main-menu.txt
src/: index.ts
src/demos/: chat-demo.ts  code-generation-demo.ts  context-aware-demo.ts
src/utils/: logger.ts
