[project]
name = "ghcp-sdk-demo"
version = "1.0.0"
description = "GitHub Copilot SDK のデモ用"
readme = "README.md"
license = "ISC"
requires-python = ">=3.12"
dependencies = [
    "InquirerPy>=0.3.4",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["ghcp_sdk_demo*"]

[project.urls]
Homepage = "https://github.com/gakushi-ishii/GHCP-SDK-demo"
Issues = "https://github.com/gakushi-ishii/GHCP-SDK-demo/issues"

[project.scripts]
ghcp-demo = "ghcp_sdk_demo.app:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
